--- a/main.css
+++ b/main.css
@@ -1,6 +1,11 @@
+/* Custom vars*/
+
+
+/* Styling */
+
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 
 html {
@@ -10,33 +15,61 @@ html {
 body {
     font-family: Roboto;
     height: 100vh;
+    margin: 0;
 }
 
-#main-header {
-    background-color: #5E51AE;
-    color: #fff;
-    margin-bottom: 30px;
+#sec-one {
+    height: 15%;
 }
+
+#sec-two {
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#sec-three {
+    height: 10%;
+}
+
+#main-title {
+    text-align: center;
+    font-size: 2.5em;
+    background-color: white;
+    margin-bottom: 5px;
+}
+
+
+#main-title, #main-footer h2 {
+    font-family: 'Finger Paint';
+}
+
 
 #main-nav ul {
-    padding: 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .nav-item {
+    padding-left: 25px;
     display: inline-block;
     list-style: none;
+    font-weight: 700;
+}
+
+.nav-item a:hover {
+    color: #99bbff;
 }
 
 .nav-item a {
     text-decoration: none;
-    color: #fff;
+    color: black;
 }
 
 .iframe-container {
     max-width: 100%;
-    height: 100%;
+    height: 30em;
     margin: 0;
     padding: 0;
 }
@@ -47,4 +80,17 @@ body {
     margin: 0;
     padding: 0;
     border: none;
+}
+
+#main-footer {
+    display: flex;
+    height: 100%;
+    color: white;
+    justify-content: center;
+    background-color: #99bbff;
+
+}
+
+#footer-title-text {
+    align-self: center;
 }
